--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@nuxt/fonts": "0.11.1",
     "@nuxt/icon": "1.12.0",
     "@nuxt/image": "1.10.0",
+    "@pinia/nuxt": "0.11.0",
     "@tailwindcss/vite": "^4.1.4",
     "nuxt": "^3.16.2",
     "oh-vue-icons": "^1.0.0-rc3",
+    "pinia": "^3.0.2",
     "reka-ui": "^2.2.0",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
